# recall

./: .gitignore  .recall  Cargo.toml
.recall/: staged_files  tracked_files
prompts/: commit_prompt.txt  goals_prompt.txt
src/: diff.rs  display.rs  files.rs  main.rs  openai.rs  parser.rs  snap.rs  storage.rs  system_prompt.txt
